Support red tweaks

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/semver"]
 	path = vendor/semver
 	url = git@github.com:Neargye/semver.git
+[submodule "vendor/pegtl"]
+	path = vendor/pegtl
+	url = git@github.com:psiberx/PEGTL.git
